--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
         </button>
 
         <!-- Seletor de Linguagem -->
-        <button onclick="alternarSeletorLinguagem()" title="Alternar seletor de linguagem">
-            <img src="https://icons.iconarchive.com/icons/fa-team/fontawesome-brands/16/FontAwesome-Code-icon.png" width="16" height="16" alt="Linguagem"> Linguagem
-        </button>
+        <button onclick="alternarSeletorLinguagem()" title="Alternar seletor de linguagem"><img src="https://icons.iconarchive.com/icons/ionic/ionicons/16/language-icon.png" width="16" height="16" alt="">Linguagem</button>
         
         <select 
             id="languageSelector" 
